==> Socrates666/rodog/main/components/drivers/icm20948.c <==
#include "icm20948.h"

void icm20948_device_reset()
{
	uint8_t write_reg[2];
	write_reg[0] = B0_PWR_MGMT_1;
	write_reg[1] = 0x80;
	ESP_ERROR_CHECK(icm.transmit_data_icm20948((icm.dev_handle), write_reg, 1, 1000));
	ESP_ERROR_CHECK(icm.receive_data_icm20948((icm.dev_handle), write_reg+1, 1, 1000));

	write_reg[1] |= 0x80;
	ESP_ERROR_CHECK(icm.transmit_data_icm20948((icm.dev_handle), write_reg, 2, 1000));
	vTaskDelay(100);
	
}

void icm20948_wakeup()
{
	uint8_t write_reg[2];
	write_reg[0] = B0_PWR_MGMT_1;
	write_reg[1] = 0;
	ESP_ERROR_CHECK(icm.transmit_data_icm20948((icm.dev_handle), write_reg, 1, 1000));
	ESP_ERROR_CHECK(icm.receive_data_icm20948((icm.dev_handle), write_reg+1, 1, 1000));
	write_reg[1] &= (~BIT6);
	ESP_ERROR_CHECK(icm.transmit_data_icm20948((icm.dev_handle), write_reg, 2, 1000));
	vTaskDelay(100 / portTICK_PERIOD_MS);
}

static void select_user_bank(userbank ub)
{
	uint8_t write_reg[2];
	write_reg[0] = REG_BANK_SEL;
	write_reg[1] = ub;

	if(icm.dev_handle==NULL) printf("handle is null\n");
	ESP_ERROR_CHECK(icm.transmit_data_icm20948((icm.dev_handle), write_reg, 2, 1000));
	vTaskDelay(pdMS_TO_TICKS(1));  // Bank切换延迟
}

static uint8_t read_single_icm20948_reg(userbank ub, uint8_t reg)
{
	uint8_t read_reg = reg;
	uint8_t reg_val=0;
	select_user_bank(ub);
	// if(icm.dev_handle != NULL) printf("handle is wrong\n");
	ESP_ERROR_CHECK(icm.transmit_data_icm20948((icm.dev_handle), &read_reg, 1, 1000));
	ESP_ERROR_CHECK(icm.receive_data_icm20948((icm.dev_handle), &reg_val, 1, 1000));

	return reg_val;
}

static void write_single_icm20948_reg(userbank ub, uint8_t reg, uint8_t val)
{
	uint8_t write_reg[2];
	write_reg[0] = reg;
	write_reg[1] = val;

	select_user_bank(ub);

	icm.transmit_data_icm20948((icm.dev_handle), write_reg, 2, 1000);

}

static uint8_t* read_multiple_icm20948_reg(userbank ub, uint8_t reg, uint8_t len)
{
	uint8_t read_reg = reg;
	static uint8_t reg_val[6];
	select_user_bank(ub);

	cs_low();
	icm.transmit_data_icm20948(icm.dev_handle, &read_reg, 1, 1000);
	icm.receive_data_icm20948(icm.dev_handle, reg_val, len, 1000);
	cs_high();

	return reg_val;
}

static void write_multiple_icm20948_reg(userbank ub, uint8_t reg, uint8_t* val, uint8_t len)
{
	uint8_t write_reg = reg;
	select_user_bank(ub);

	cs_low();
	icm.transmit_data_icm20948(icm.dev_handle, &write_reg, 1, 1000);
	icm.transmit_data_icm20948(icm.dev_handle, val, len, 1000);
	cs_high();
}
